/*
 * $Id: ChangeLog,v 1.300 2006-12-02 18:25:39 guerra000 Exp $
 */
/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2006-12-02 12:24 UTC-0600 Vicente Guerra <vicente@guerra.com.mx>
  * source/h_grid.prg
    ! Fixed ::SetItemCount() when no items were defined.
  * source/h_textbox.prg
    ! Added ::RefreshData() to ::Refresh() method.

2006-11-26 16:40 UTC-0600 Vicente Guerra <vicente@guerra.com.mx>
  * include/i_status.ch
    ! Fixed DATE "item" definition.
    + SUBCLASS clause added.
  * include/i_timer.ch
  * source/h_timer.prg
    + SUBCLASS clause added.
    + DISABLED clause added.

2006-11-25 09:24 UTC-0600 Vicente Guerra <vicente@guerra.com.mx>
  * source/h_status.prg
    ! Fixed STATUSBAR's container implementation.
    ! Fixed message definition on STATUSBAR declaration.

2006-11-24 22:13 UTC-0600 Vicente Guerra <vicente@guerra.com.mx>
  * source/h_controlmisc.prg
  * source/h_windows.prg
    ! Fixed BACKCOLOR implementation.
  * include/i_status.ch
  * source/h_status.prg
    * STATUSBAR internal desing changed.
    + TItemMessage() class removed. Statusbar's parts are now
      managed directly from control.
    + ::BackColor functionality added.
    + STATUSBAR is now a CONTAINER control (you can add so easy
      a progressbar/progressmeter or something else :) )

2006-11-24 10:41 UTC-0500 Ciro Vargas C. <pcman2010@yahoo.com>
  * source/h_grid.prg
    * changed form name in createwindow method to avoid same names from our own programs
    * adjusting adding blank dates in appenditem method
  * source/winprint.prg
    * adjusting window preview for certain resolutions.

2006-11-23 11:57 UTC-0500 Ciro Vargas C. <pcman2010@yahoo.com>
  * source/h_print
    * In Tprint ::method printdata now print codeblocks.

2006-11-23 7:35 UTC-0500 Ciro Vargas C. <pcman2010@yahoo.com>
  * source/h_report.prg